[package]
name = "telegram-bot-raw"
version = "0.7.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>", "Fedor Gogolev <knsd@knsd.net>", "Gustavo Aguiar <gustavo.h.o.aguiar@gmail.com>"]
edition = "2018"

description = "Telegram Bot API types"

documentation = "https://docs.rs/telegram-bot-raw/"
repository = "https://github.com/telegram-rs/telegram-bot"
readme = "../README.md"

keywords = ["telegram", "bot", "chat", "api"]
categories = ["api-bindings"]
license = "MIT"

[features]
default = ["request_building"]
request_building = ["serde_json"]


[dependencies]
bytes = "0.5"
serde = { version = "1", default-features = false}
serde_derive = "1"
serde_json = { version = "1", optional = true }
serde-value = "0.5.2"
