[package]
name = "telegram-bot-raw"
version = "0.7.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>", "Fedor Gogolev <knsd@knsd.net>", "Gustavo Aguiar <gustavo.h.o.aguiar@gmail.com>"]
edition = "2018"

description = "Telegram Bot API types"

documentation = "https://docs.rs/telegram-bot-raw/"
repository = "https://github.com/telegram-rs/telegram-bot"
readme = "../README.md"

keywords = ["telegram", "bot", "chat", "api"]
categories = ["api-bindings"]
license = "MIT"

[features]
default = ["request_building", "bytes/std"]
request_building = ["serde_json"]
no_std = ["serde/alloc"]


[dependencies]
bytes = {version = "0.5", default-features = false }
serde = { version = "1", default-features = false }
serde_derive = { version = "1", default-features = false }
serde_json = { version = "1", optional = true }
